# Object-Catching-Robot

./: README.md
commander/: CMakeLists.txt  detect_image.py  package.xml
commander/src/: command.py  detect_image.py  detect_image_x.py  detect_image_y.py  detections.py
simulation/: CMakeLists.txt  package.xml
simulation/launch/: my_world.launch
simulation/models/fixed_camera/: camera_parameter.xacro  fixed_camera.gazebo  fixed_camera.xacro
simulation/models/fixed_camera_x/: camera_parameter_x.xacro  fixed_camera_x.gazebo  fixed_camera_x.xacro
simulation/models/fixed_camera_y/: camera_parameter_y.xacro  fixed_camera_y.gazebo  fixed_camera_y.xacro
simulation/models/green_ball/: model.sdf
simulation/models/object/: my_object.gazebo  my_object.xacro
simulation/models/ramp/: model.sdf
simulation/models/ramp/meshes/: ramp.STL
simulation/models/vehicle/: macros.xacro  materials.xacro  parameter.xacro  vehicle.gazebo  vehicle.xacro
simulation/plugins/initial_velocity/: CMakeLists.txt  initial_velocity.cc
simulation/plugins/model_push/: model_push.cc
simulation/world/: empty_world.world
