<?xml version="1.0"?>
<package>
  <name>simulation</name>
  <version>1.0.0</version>
  <description>hctcyfh</description>
  <maintainer email="chandu@todo.todo">chandu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

   
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

   <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>
  
</package>